Added more notes.
Began my review of the start of JS starting with Day 1. Made notes with questions.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 <body>
     <h1>Well Hello Again</h1>
 </body>
-<script type="text/javascript" src="app.js"></script> <!--QUESTION: Why is this there and not in the head?-->
+<script type="text/javascript" src="app.js"></script> <!--QUESTION: Why is this there and not in the head? ANSWER: Your page needs to run the code for your webpage FIRST, running JS before the page code will make it slow or laggy-->
 </html>
