--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Well Hello Again</h1>
+        <p>password: 123 </p>
 </body>
 <script type="text/javascript" src="app.js"></script> <!--QUESTION: Why is this there and not in the head? ANSWER: Your page needs to run the code for your webpage FIRST, running JS before the page code will make it slow or laggy-->
 </html>
